--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.0.RELEASE'
-        alpnBootVersion = '8.1.6.v20151105'
+        springBootVersion = '1.3.3.RELEASE'
+        alpnBootVersion   = '8.1.7.v20160121'
+		jettyVersion      = '9.3.8.v20160314'
     }
 
     repositories {
@@ -35,6 +36,13 @@ configurations {
     jvmBoot { description "additional libs on jvm bootclasspath" }
 }
 
+dependencyManagement {
+	imports {
+		ext['jetty.version'] = "${jettyVersion}"
+	  mavenBom "org.springframework.boot:spring-boot-starter-parent:${springBootVersion}"
+	}
+  }
+
 repositories {
      jcenter()
 }
@@ -42,12 +50,18 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework:spring-webmvc')
-    compile ('org.springframework.boot:spring-boot-starter-undertow') {
-        exclude(module: 'undertow-websockets-jsr')
-    }
+	
+	// jetty
+    compile('org.springframework.boot:spring-boot-starter-jetty')
+	compile("org.eclipse.jetty.http2:http2-server:${jettyVersion}")
+	compile("org.eclipse.jetty:jetty-alpn-server:${jettyVersion}")
+
     testCompile('org.springframework.boot:spring-boot-starter-test') {
         exclude(module: 'commons-logging')
     }
+
+	// ALPN
+    compile "org.mortbay.jetty.alpn:alpn-boot:${alpnBootVersion}"
     jvmBoot "org.mortbay.jetty.alpn:alpn-boot:${alpnBootVersion}"
 }
 
