--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8443
 server.ssl.key-store=classpath:sample.jks
 server.ssl.key-store-password=secret
 server.ssl.key-password=password
+server.ssl.protocol=TLSv1.2
