--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         springBootVersion = '1.3.3.RELEASE'
         alpnBootVersion   = '8.1.7.v20160121'
-		jettyVersion      = '9.3.8.v20160314'
+        jettyVersion      = '9.3.8.v20160314'
     }
 
     repositories {
@@ -37,11 +37,11 @@ configurations {
 }
 
 dependencyManagement {
-	imports {
-		ext['jetty.version'] = "${jettyVersion}"
-	  mavenBom "org.springframework.boot:spring-boot-starter-parent:${springBootVersion}"
-	}
-  }
+    imports {
+        ext['jetty.version'] = "${jettyVersion}"
+        mavenBom "org.springframework.boot:spring-boot-starter-parent:${springBootVersion}"
+    }
+}
 
 repositories {
      jcenter()
@@ -50,19 +50,19 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
     compile('org.springframework:spring-webmvc')
-	
-	// jetty
+
+    // jetty
     compile('org.springframework.boot:spring-boot-starter-jetty')
-	compile("org.eclipse.jetty.http2:http2-server:${jettyVersion}")
-	compile("org.eclipse.jetty:jetty-alpn-server:${jettyVersion}")
+    compile("org.eclipse.jetty.http2:http2-server:${jettyVersion}")
+    compile("org.eclipse.jetty:jetty-alpn-server:${jettyVersion}")
 
     testCompile('org.springframework.boot:spring-boot-starter-test') {
         exclude(module: 'commons-logging')
     }
 
-	// ALPN
-    compile "org.mortbay.jetty.alpn:alpn-boot:${alpnBootVersion}"
-    jvmBoot "org.mortbay.jetty.alpn:alpn-boot:${alpnBootVersion}"
+    // ALPN
+    compile("org.mortbay.jetty.alpn:alpn-boot:${alpnBootVersion}")
+    jvmBoot("org.mortbay.jetty.alpn:alpn-boot:${alpnBootVersion}")
 }
 
 defaultTasks 'bootRun'
