--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8443
-server.ssl.key-store=classpath:sample.jks
-server.ssl.key-store-password=secret
-server.ssl.key-password=password
+server.ssl.key-store=classpath:sample2.jks
+server.ssl.key-store-password=changeit
+server.ssl.key-password=changeit
 server.ssl.protocol=TLSv1.2
