--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.ssl.key-store=classpath:sample2.jks
 server.ssl.key-store-password=changeit
 server.ssl.key-password=changeit
 server.ssl.protocol=TLSv1.2
+logging.level.org.eclipse.jetty.alpn=DEBUG
+logging.level.org.eclipse.jetty.http2.server=DEBUG
