jetty static files + pushcache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.ssl.key-password=changeit
 server.ssl.protocol=TLSv1.2
 logging.level.org.eclipse.jetty.alpn=DEBUG
 logging.level.org.eclipse.jetty.http2.server=DEBUG
+logging.level.org.eclipse.jetty.servlets.PushCacheFilter=DEBUG
